Implement metadata-driven vector ingestion and normalization cache